custom dropdown directive, security issue fix, localStorage repository, added more hobby suggestions

--- a/assets/stylesheets/bundle.scss
+++ b/assets/stylesheets/bundle.scss
@@ -1,1 +1,6 @@
-@import "vendor/bootstrap-sass-grid";
+@import "bootstrap-custom";
+
+@import "variables/variables";
+@import "utils/utils";
+
+@import "components/components";
