--- a/assets/templates/landingPageView.html
+++ b/assets/templates/landingPageView.html
@@ -1,5 +1,5 @@
-<div>
-    <a ng-href="/form">
+<div class="container-centered container-vertical-center text-center">
+    <a class="button button-action" ng-href="/form">
         Spustit formulář
     </a>
 </div>
